make project hover state available on mobile too

--- a/css/app.css
+++ b/css/app.css
@@ -4867,28 +4867,23 @@ small {
   .project-thumb-wrapper .project-thumb {
     height: 100%; }
   .project-thumb-wrapper .project-hover-logo {
-    display: none; }
-  @media screen and (min-width: 40em) {
-    .project-thumb-wrapper .project-hover-logo {
-      display: block;
-      opacity: 0;
-      position: absolute;
-      z-index: 1;
-      width: 78px;
-      height: 78px;
-      left: 50%;
-      top: 50%;
-      margin-left: -39px;
-      margin-top: -39px;
-      -ms-transform: scale(0);
-          transform: scale(0);
-      transition: transform 250ms, opacity 200ms; }
-      a:hover .project-thumb-wrapper .project-hover-logo {
-        opacity: 1;
-        -ms-transform: scale(1);
-            transform: scale(1); } }
-  .project-thumb-wrapper .circle {
-    background: #C92C39; }
+    display: block;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    width: 78px;
+    height: 78px;
+    left: 50%;
+    top: 50%;
+    margin-left: -39px;
+    margin-top: -39px;
+    -ms-transform: scale(0);
+        transform: scale(0);
+    transition: transform 250ms, opacity 200ms; }
+    a:hover .project-thumb-wrapper .project-hover-logo {
+      opacity: 1;
+      -ms-transform: scale(1);
+          transform: scale(1); }
 
 .project-thumb {
   width: 100vw;
@@ -4913,28 +4908,23 @@ small {
   .project-thumb .project-thumb {
     height: 100%; }
   .project-thumb .project-hover-logo {
-    display: none; }
-  @media screen and (min-width: 40em) {
-    .project-thumb .project-hover-logo {
-      display: block;
-      opacity: 0;
-      position: absolute;
-      z-index: 1;
-      width: 78px;
-      height: 78px;
-      left: 50%;
-      top: 50%;
-      margin-left: -39px;
-      margin-top: -39px;
-      -ms-transform: scale(0);
-          transform: scale(0);
-      transition: transform 250ms, opacity 200ms; }
-      a:hover .project-thumb .project-hover-logo {
-        opacity: 1;
-        -ms-transform: scale(1);
-            transform: scale(1); } }
-  .project-thumb .circle {
-    background: #C92C39; }
+    display: block;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    width: 78px;
+    height: 78px;
+    left: 50%;
+    top: 50%;
+    margin-left: -39px;
+    margin-top: -39px;
+    -ms-transform: scale(0);
+        transform: scale(0);
+    transition: transform 250ms, opacity 200ms; }
+    a:hover .project-thumb .project-hover-logo {
+      opacity: 1;
+      -ms-transform: scale(1);
+          transform: scale(1); }
 
 .project-name {
   font-weight: 700;
@@ -4997,6 +4987,12 @@ small {
   font-weight: 200;
   padding-left: 12px;
   margin-bottom: 32px; }
+
+/**
+ * Project listing module
+ */
+.project-listing .circle {
+  background: #C92C39; }
 
 .recent-projects:nth-child(odd) .column, .recent-projects:nth-child(odd) .columns {
   padding-left: 0; }
