--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -28,35 +28,24 @@
 	}
 
 	.project-hover-logo {
-		display: none; // not required for mobile
-	}
+		display: block;
+		opacity: 0;
+		position: absolute;
+		z-index: 1;
+		width: 78px;
+		height: 78px;
+		left: 50%;
+		top: 50%;
+		margin-left: -39px;
+		margin-top: -39px;
 
-	@media #{$medium-up} {
-		.project-hover-logo {
-			display: block;
-			opacity: 0;
-			position: absolute;
-			z-index: 1;
-			width: 78px;
-			height: 78px;
-			left: 50%;
-			top: 50%;
-			margin-left: -39px;
-			margin-top: -39px;
+		transform: scale(0);
+		transition: transform 250ms, opacity 200ms;
 
-			transform: scale(0);
-			transition: transform 250ms, opacity 200ms;
-
-			a:hover & {
-				opacity: 1;
-				transform: scale(1);
-			}
+		a:hover & {
+			opacity: 1;
+			transform: scale(1);
 		}
-	}
-
-	// used for material design click
-	.circle {
-		background: $primary-color;
 	}
 }
 
@@ -403,12 +392,6 @@ small {
 			display: inline-block;
 		}
 	}
-
-	// .project-location {
-	// 	float: right;
-	// 	text-align: right;
-	// 	font-weight: $global-weight-light;
-	// }
 }
 
 .project-detail-content {
@@ -417,6 +400,17 @@ small {
 		font-weight: $global-weight-light;
 		padding-left: 12px;
 		margin-bottom: 32px;
+	}
+}
+
+/**
+ * Project listing module
+ */
+
+.project-listing {
+	// used for material design click
+	.circle {
+		background: $primary-color;
 	}
 }
 
