remove red material design click from project listing

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -410,7 +410,7 @@ small {
 .project-listing {
 	// used for material design click
 	.circle {
-		background: $primary-color;
+		// background: $primary-color;
 	}
 }
 
