first pass on svg animate loader

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -76,6 +76,13 @@
 
      -->
 
+    <div id="loader" class="loader">
+      <span id="loader-logo" class="loader-logo">
+        <object id="loader-logo-svg" type="image/svg+xml" data="/img/logo_d.svg"></object>
+        <object id="loader-logo-svg-fill" class="" type="image/svg+xml" data="/img/logo_d_fill.svg"></object>
+      </span>
+    </div>
+
     <div id="off-canvas-menu" class="off-canvas-wrapper" data-force-top="false">
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
@@ -140,6 +147,7 @@
     <script>window.jQuery || document.write('<script src="{{site.url}}/bower_components/jquery/dist/jquery.js"><\/script>')</script>
     <script src="{{site.url}}/bower_components/what-input/what-input.js"></script>
     <script src="{{site.url}}/bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="{{site.url}}/bower_components/vivus/dist/vivus.js"></script>
     <script src="{{site.url}}/js/app.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
