--- a/css/app.css
+++ b/css/app.css
@@ -4654,6 +4654,31 @@ table.hover tr:nth-of-type(even):hover {
 
 /***************** end padding and margin settings *************/
 /* custom */
+.loader {
+  z-index: 999999;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background: #fefefe;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center; }
+  .loader .loader-logo {
+    position: relative;
+    height: 90px;
+    width: 80px; }
+  .loader #loader-logo-svg,
+  .loader #loader-logo-svg-fill {
+    position: absolute; }
+  .loader #loader-logo-svg-fill {
+    opacity: 0;
+    transition: opacity 200ms; }
+    .loader #loader-logo-svg-fill.loader-complete {
+      opacity: 1; }
+
 @font-face {
   font-family: 'Avenir Next';
   src: url("fonts/AvenirNext-Bold.eot");
