--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -359,7 +359,7 @@ small {
 	font-size: rem-calc(28);
 	font-weight: $global-weight-light;
 
-	@media #{$medium-up} {
+	@media #{$large-up} {
 		text-align: right;
 		float: right;
 		margin-top: 0;
