cta hover bugfix

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -550,6 +550,10 @@ small {
 	&:hover {
 		box-shadow: none;
 		text-shadow: none;
+
+		[data-whatinput="mouse"] & {
+			color: $white;
+		}
 	}
 }
 
