missed css build

--- a/css/app.css
+++ b/css/app.css
@@ -5082,6 +5082,8 @@ small {
   .cta:hover {
     box-shadow: none;
     text-shadow: none; }
+    [data-whatinput="mouse"] .cta:hover {
+      color: #fefefe; }
 
 /**
  * Material design click
