--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -148,7 +148,8 @@
     <script src="{{site.url}}/bower_components/what-input/what-input.js"></script>
     <script src="{{site.url}}/bower_components/foundation-sites/dist/foundation.js"></script>
     <script src="{{site.url}}/bower_components/vivus/dist/vivus.js"></script>
-    <script src="{{site.url}}/js/app.js"></script>
+    <script src="{{site.url}}/js/dist/scripts.js"></script>
+    <!-- <script src="{{site.url}}/js/dist/scripts.min.js"></script> -->
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
