--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
-/* 
-	app.css 
+/*
+	app.css
 	part of http://daigofuji.github.io/jekyll-foundation-56-starter/ by Daigo Fujiwara (@DaigoFuji)
 	http://google-styleguide.googlecode.com/svn/trunk/htmlcssguide.xml#CSS_Style_Rules
 	http://csslint.net/ (Will hurt your feelings)
@@ -53,6 +53,11 @@
 
 /* padding and margins */
 @import "padding-margin";
+
+
+// Photoswipe UI Styles, stupoidly named
+@import 'photoswipe';
+@import 'default-skin/default-skin';
 
 /* custom */
 @import "custom";
