--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,15 +7,13 @@ layout: default
     <div class="project-thumb-wrapper">
       <div class="thumbnail project-thumb" style="background-image: url('{{page.feature_img}}');" title="Image of {{page.title}} {{page.location}}"></div>
     </div>
-    <div class="">
+    {% gallery %}
+    <div>
       <h1 class="project-name">{{page.title}}</h1>
       <h2 class="project-location">{{page.location}}</h2>
     </div>
   </div>
 </div>
-
-
-{% gallery verdis %}
 
 {{ content }}
 
