Style project gallery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,6 +152,7 @@
     <script src="{{site.url}}/bower_components/vivus/dist/vivus.js"></script>
     <script src="{{site.url}}/bower_components/photoswipe/dist/photoswipe.js"></script>
     <script src="{{site.url}}/bower_components/photoswipe/dist/photoswipe-ui-default.js"></script>
+    <!--<script src="{{site.url}}/node_modules/slick-carousel/slick/slick.js"></script>-->
     <script src="{{site.url}}/js/dist/scripts.js"></script>
     <!-- <script src="{{site.url}}/js/dist/scripts.min.js"></script> -->
 
