--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,11 +1,10 @@
-{% for image in images %}
-    {{ image.exif.width }}
-    <div class="gallery-image-wrapper">
-        <a name="{{ image.name }}">{{ image.name }}</a> <br>
-        <a href="{{ image.src }}">
-            <img class="gallery-image" src="{{ image.thumb_src }}" />
-        </a>
-    </div>
-
-
-{% endfor %}
+<div class="photoswipe-gallery slick-carousel slick-dotted" itemscope itemtype="http://schema.org/ImageGallery">
+    {% for image in images %}
+        <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+            <a href="{{image.src}}" itemprop="contentUrl" data-size="{{image.exif.width}}x{{image.exif.height}}">
+                <img src="{{image.src}}" class="thumbnail project-thumb" itemprop="thumbnail" alt="{{image.name}}" title="{{image.name}}" />
+                <figcaption itemprop="caption description">{{image.name}}</figcaption>
+            </a>
+        </figure>
+    {% endfor %}
+</div>
