--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -557,3 +557,8 @@ $topbar-padding: 0.5rem;
 $topbar-background: $white;
 $topbar-title-spacing: 1rem;
 $topbar-input-width: 200px;
+
+
+// ANY OTHER SETTINGS (NON FOUNDATION SETTINGS)
+
+$slick-font-family: 'FontAwesome';
