--- a/css/app.css
+++ b/css/app.css
@@ -5362,13 +5362,6 @@ a.pswp__share--download:hover {
   background: #fff url("./ajax-loader.gif") center center no-repeat; }
 
 /* Icons */
-@font-face {
-  font-family: "slick";
-  src: url("./fonts/slick.eot");
-  src: url("./fonts/slick.eot?#iefix") format("embedded-opentype"), url("./fonts/slick.woff") format("woff"), url("./fonts/slick.ttf") format("truetype"), url("./fonts/slick.svg#slick") format("svg");
-  font-weight: normal;
-  font-style: normal; }
-
 /* Arrows */
 .slick-prev,
 .slick-next {
@@ -5402,7 +5395,7 @@ a.pswp__share--download:hover {
     opacity: 0.25; }
   .slick-prev:before,
   .slick-next:before {
-    font-family: "slick";
+    font-family: "FontAwesome";
     font-size: 20px;
     line-height: 1;
     color: white;
@@ -5474,7 +5467,7 @@ a.pswp__share--download:hover {
         content: "•";
         width: 20px;
         height: 20px;
-        font-family: "slick";
+        font-family: "FontAwesome";
         font-size: 6px;
         line-height: 20px;
         text-align: center;
@@ -5723,6 +5716,22 @@ small {
       opacity: .55; }
     .project-thumb-wrapper .slick-dots li.slick-active button:before {
       opacity: 1; }
+  .project-thumb-wrapper .slick-prev,
+  .project-thumb-wrapper .slick-next {
+    display: none;
+    z-index: 1;
+    margin-top: -16px; }
+    .project-thumb-wrapper .slick-prev:before,
+    .project-thumb-wrapper .slick-next:before {
+      font-size: 36px; }
+  .project-thumb-wrapper .slick-prev {
+    left: 55px; }
+    .project-thumb-wrapper .slick-prev:before {
+      content: '\f104'; }
+  .project-thumb-wrapper .slick-next {
+    right: 55px; }
+    .project-thumb-wrapper .slick-next:before {
+      content: '\f105'; }
   .project-thumb-wrapper .project-hover-logo {
     display: block;
     opacity: 0;
@@ -5772,6 +5781,22 @@ small {
       opacity: .55; }
     .project-thumb .slick-dots li.slick-active button:before {
       opacity: 1; }
+  .project-thumb .slick-prev,
+  .project-thumb .slick-next {
+    display: none;
+    z-index: 1;
+    margin-top: -16px; }
+    .project-thumb .slick-prev:before,
+    .project-thumb .slick-next:before {
+      font-size: 36px; }
+  .project-thumb .slick-prev {
+    left: 55px; }
+    .project-thumb .slick-prev:before {
+      content: '\f104'; }
+  .project-thumb .slick-next {
+    right: 55px; }
+    .project-thumb .slick-next:before {
+      content: '\f105'; }
   .project-thumb .project-hover-logo {
     display: block;
     opacity: 0;
