--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -562,3 +562,4 @@ $topbar-input-width: 200px;
 // ANY OTHER SETTINGS (NON FOUNDATION SETTINGS)
 
 $slick-font-family: 'FontAwesome';
+$slick-loader-path: '/img/'
