--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -39,7 +39,7 @@
 	margin-left: -50vw;
 	margin-right: -50vw;
 
-	height: 270px;
+	// height: 270px;
 	max-height: 70vh;
 	overflow: hidden;
 	background-position: center;
@@ -63,7 +63,7 @@
 	}
 
 	.slick-dots {
-		bottom: 45px;
+		bottom: 15px;
 
 		li button:before {
 			color: $white;
@@ -79,7 +79,7 @@
 	.slick-prev,
 	.slick-next {
 		z-index: 1;
-		margin-top: -16px;
+		// margin-top: -16px;
 		&:before {
 			font-size: 36px;
 		}
