Add contract page, gulp build improvements, more minor cleanup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,17 +125,10 @@
             {% include photoswipe.html %}
           </main>
 
-          {% include cta.html %}
-
-          <footer id="contact" class="site-footer row light-grey-block" role="contentinfo">
-            <i class="logo-spacer large"></i>
-            <h2 class="text-center"><small>Contact</small></h2>
-            <ul class="text-center">
-              <li><a href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
-              <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            </ul>
+          <footer id="footer" class="site-footer row light-grey-block" role="contentinfo">
+            <i class="logo-spacer"></i>
             <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }} <br>
-              <!-- <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p> -->
+            <!-- <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p> -->
           </footer>
         </div><!-- end .off-canvas-content -->
 
