--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
 <li><a href="{{site.url}}/portfolio">Portfolio</a></li>
 <li><a href="{{site.url}}/testimonials">Testimonials</a></li>
 <li><a href="{{ site.url }}/#about">About</a></li>
-<li><a href="#contact">Contact</a></li>
+<li><a href="{{ site.url }}/contact">Contact</a></li>
