--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,4 +2,8 @@
 layout: default
 ---
 
-{{ content }}
+<div class="row">
+  <div class="medium-10 columns small-centered text-center">
+    {{ content }}
+  </div>
+</div>
