--- a/scss/_modules/_mixins.scss
+++ b/scss/_modules/_mixins.scss
@@ -27,6 +27,10 @@
 		height: 100%;
 	}
 
+	.project-thumb img {
+		min-width: 100%;
+	}
+
 	.slick-list .slick-loading & {
 		//background: none;
 	}
