--- a/scss/_modules/_mixins.scss
+++ b/scss/_modules/_mixins.scss
@@ -3,6 +3,8 @@
 @mixin project-thumb {
 	width: 100vw;
 	position: relative;
+
+	// get image over the column's padding
 	left: 50%;
 	right: 50%;
 	margin-left: -50vw;
@@ -24,11 +26,27 @@
 	}
 
 	.project-thumb {
-		height: 100%;
+		height: 310px;
+
+		// center img
+		display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 	}
 
 	.project-thumb img {
-		min-width: 100%;
+		height: 100%;
+		max-width: none;
+
+		// center img
+		flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+
+		@media #{$medium-up} {
+			max-width: 100vw;
+		}
 	}
 
 	.slick-list .slick-loading & {
