Align Recent Projects better

--- a/_includes/recent-projects.html
+++ b/_includes/recent-projects.html
@@ -4,8 +4,7 @@
   {% assign posts = site.posts %}
 {% endif %}
 <div class="row">
-  <br>
-  <div class="medium-12 small-centered column">
+  <div class="small-11 medium-10 small-centered column">
     <h3>Recent Projects</h3>
     <br>
 
