--- a/scss/_modules/_pages.scss
+++ b/scss/_modules/_pages.scss
@@ -44,10 +44,10 @@
 	font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 	display: inline-block;
 	margin-top: -12px;
-	font-size: rem-calc(28);
+	font-size: rem-calc(26);
 	font-weight: $global-weight-light;
 
-	@media #{$large-up} {
+	@media #{$medium-up} {
 		text-align: right;
 		float: right;
 		margin-top: 0;
@@ -146,14 +146,19 @@
 /**
  * Recent projects module
  */
-
-.recent-projects:nth-child(odd) .column {
-    padding-left: 0;
+@media #{$small-only} {
+	.recent-projects .column {
+		padding: 0;
+	}
 }
-.recent-projects:nth-child(even) .column {
-    padding-right: 0;
+@media #{$large-up} {
+	.recent-projects:nth-child(odd) .column {
+	    padding-left: 0;
+	}
+	.recent-projects:nth-child(even) .column {
+	    padding-right: 0;
+	}
 }
-
 
 /**
  * TESTIMONIALS PAGE
