--- a/_includes/recent-projects.html
+++ b/_includes/recent-projects.html
@@ -6,7 +6,7 @@
 <div class="row">
   <div class="small-11 medium-10 small-centered column">
     <h3>Recent Projects</h3>
-    <br>
+    <span></span>
 
     {% for project in posts limit:2 %}
         <div class="large-6 columns project-listing recent-projects">
