--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,8 +141,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{site.url}}/bower_components/jquery/dist/jquery.js"><\/script>')</script>
 
-    <script src="{{site.url}}/js/dist/scripts.js"></script>
-    <!-- <script src="{{site.url}}/js/dist/scripts.min.js"></script> -->
+    <script src="{{site.url}}/js/dist/scripts.min.js"></script>
 
     <!-- Google Analytics CHANGE THIS TO YOUR UA CODE-->
     <script>
