--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="row project-detail">
-  <div class="small-11 medium-10 columns small-centered">
+  <div class="small-11 large-10 columns small-centered">
     <div class="project-thumb-wrapper">
       <!--<div class="thumbnail project-thumb" style="background-image: url('{{page.feature_img}}');" title="Image of {{page.title}} {{page.location}}"></div>-->
       {% gallery %}
